--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -47,7 +47,7 @@ nav, p, section, article {
     height:auto
 }
 
-.hero h1{
+h1{
     position: absolute;
     top: 20px;
     width: 100%;
@@ -58,7 +58,7 @@ nav, p, section, article {
     color: #ffff;
 }
 
-.hero article {
+article {
     position: absolute;
     top: 260px;
     width: 95%;
