--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -200,6 +200,7 @@ footer p {
 
 .map-container iframe {
     width: 100%;
+    max-width: 100%;
     height: 300px;
     border: 2px solid #ccc;
     border-radius: 5px;
