--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -71,7 +71,7 @@ nav, p, section, article {
 }
 
 
-h1{
+.hero h1{
     position: absolute;
     top: 20px;
     width: 100%;
@@ -80,6 +80,13 @@ h1{
     opacity: 0.9;
     background-color: var(--accent1-color);
     color: #fff;
+}
+
+.hero2 h1 {
+    position: relative;
+    width: 100%;
+    text-align: center;
+
 }
 
 h2{
